2008-07-18  David Hyatt  <hyatt@apple.com>

        Change the cached clip rects to not assume they should be infinite when the root layer has been
        shifted as the result of a transformation.

        Reviewed by Maciej

        Added fast/transforms/overflow-with-transform.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::calculateClipRects):

2008-07-21  Rob Buis  <buis@kde.org>

        Reviewed by Mitz.

        https://bugs.webkit.org/show_bug.cgi?id=19966
        CSS variables crash when using hex notation for colors

        Support hex colors as values for the css variables.

        Test: fast/css/variables/color-hex-test.html

        * css/CSSParserValues.cpp:
        (WebCore::CSSParserValue::createCSSValue):
        * css/CSSPrimitiveValue.cpp:
        (WebCore::CSSPrimitiveValue::parserValue):
        * css/CSSVariablesRule.cpp:

2008-07-21  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger.

        Fix drawing of windowless plugins on Windows with the Qt port by
        avoiding the reset of the translation of the HDC to 0, 0.

        * plugins/win/PluginViewWin.cpp:
        (WebCore::PluginView::paint):

2008-07-21  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger.

        Fix rendering of transparent windowless netscape plugins by passing
        the right conversion parameter to QPixmap::fromWinHBITMAP when
        converting from HBITMAP to QPixmap.

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::releaseWindowsContext):

2008-07-21  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger.

        In the implementation of getValue for NPNVnetscapeWindow treat
        windowHandleForPlatformWidget on the return value of
        containingWindow() to receive the correct HWND for the Qt port.

        * plugins/win/PluginViewWin.cpp:
        (WebCore::PluginView::getValue):

2008-07-21  Simon Hausmann  <hausmann@webkit.org>
